added requirejs and headerRegion and mainRegion

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
   <body>
     <!--TODO define two divs -->
+<div id="header"></div>
+<div id="main" ></div>
 
     <div id="dialog-region"></div>
+
+<script data-main="./src/js/main.js" src="./vendors/js/require.js"></script>
 
   </body>
 </html>
