added tempalte to item users

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <title>Multimedia Marionette Contact Manager</title>
     <link href="./src/css/application.css" rel="stylesheet">
     <link href="./vendors/css/jquery-ui-1.10.0.custom.css" rel="stylesheet">
+<link href="./vendors/css/bootstrap.css" rel="stylesheet">
   </head>
 
   <body>
     <!--TODO define two divs -->
 <div id="header"></div>
-<div id="main" ></div>
+<div id="main" class="container"></div>
 
     <div id="dialog-region"></div>
 
-<script data-main="./src/js/main.js" src="./vendors/js/require.js"></script>
+    <script data-main="./src/js/main.js" src="./vendors/js/require.js"></script>
 
   </body>
 </html>
